# What2Eat

./: .gitignore  categorizer.py  constitute_DB_recette.py  food_getter.py  milvus_DB_Manager.py  pyproject.toml  recipe_processor.py  url_analyzer.py
frontend/src/: App.css  App.tsx  ImageUploader.tsx  IngredientsList.tsx  RecipesList.css  RecipesList.tsx
src/backend/: categorizer.py  constitute_DB_recette.py  encoder.py  food_getter.py  main.py  milvus_DB_Manager.py  url_analyzer.py
src/what2eat.egg-info/: PKG-INFO
